@@ -113,7 +113,7 @@ class AmendmentFspValidationStepTest {
 
     // Assert
     assertThat(errors).hasSize(1);
-    assertThat(errors.get(0).getCode())
+    assertThat(errors.getFirst().getCode())
         .isEqualTo(ClaimAmendmentValidationCode.INVALID_CLAIM_BEFORE_STATE_CFD_MISSING.toString());
     verifyNoInteractions(fspClient);
   }
@@ -177,7 +177,7 @@ class AmendmentFspValidationStepTest {
 
     // Assert
     assertThat(errors).hasSize(1);
-    ClaimAmendmentValidationError error = errors.get(0);
+    ClaimAmendmentValidationError error = errors.getFirst();
     assertThat(error.getCode())
         .isEqualTo(ClaimAmendmentValidationCode.INVALID_FSP_VALIDATION_FAILURE.toString());
     assertThat(error.getMessage())
@@ -203,7 +203,7 @@ class AmendmentFspValidationStepTest {
 
     // Assert
     assertThat(errors).hasSize(1);
-    ClaimAmendmentValidationError error = errors.get(0);
+    ClaimAmendmentValidationError error = errors.getFirst();
     assertThat(error.getCode())
         .isEqualTo(ClaimAmendmentValidationCode.TECHNICAL_ERROR_FSP_REPRICING_FAILURE.toString());
   }
@@ -251,6 +251,37 @@ class AmendmentFspValidationStepTest {
   }
 
   @Test
+  @DisplayName(
+      "Should handle exceptions thrown by the FeeSchemeRequestBuilder and return a technical error")
+  void validate_whenRequestBuilderThrows_returnsTechnicalError() {
+    // Arrange: Force execution past the guard with a pricing-impacting fee-code change
+    ClaimAmendmentState state =
+        stateBuilder
+            .beforeState(beforeStateBuilder.areaOfLaw(AreaOfLaw.CRIME_LOWER).build())
+            .postAmendmentState(
+                postStateBuilder.areaOfLaw(AreaOfLaw.CRIME_LOWER).feeCode("FEE02").build())
+            .build();
+
+    AmendmentDiff pricingImpactingDiff =
+        AmendmentDiff.of(List.of(new DiffEntry("claim.feeCode", null, "FEE01", "FEE02")));
+    when(diffAssembler.assemble(any(ClaimAmendmentState.class))).thenReturn(pricingImpactingDiff);
+
+    when(requestBuilder.buildRequest(any()))
+        .thenThrow(
+            new IllegalStateException("Unable to build FeeCalculationRequest: missing data"));
+
+    // Act
+    List<ClaimAmendmentValidationError> errors = validationStep.validate(state);
+
+    // Assert: A semantic validation error should be returned and no FSP call should be attempted
+    assertThat(errors).hasSize(1);
+    assertThat(errors.getFirst().getCode())
+        .isEqualTo(ClaimAmendmentValidationCode.INVALID_FSP_VALIDATION_FAILURE.toString());
+    assertThat(errors.getFirst().getMessage()).contains("Unable to build FeeCalculationRequest");
+    verifyNoInteractions(fspClient);
+  }
+
+  @Test
   @DisplayName("1595-E: Should capture null response body from FSP and map to technical error")
   void validate_whenFspReturnsNullBody_returnsTechnicalError() {
     // Arrange: Force execution past the guard
@@ -269,7 +300,7 @@ class AmendmentFspValidationStepTest {
 
     // Assert
     assertThat(errors).hasSize(1);
-    ClaimAmendmentValidationError error = errors.get(0);
+    ClaimAmendmentValidationError error = errors.getFirst();
     assertThat(error.getCode())
         .isEqualTo(ClaimAmendmentValidationCode.TECHNICAL_ERROR_FSP_REPRICING_FAILURE.toString());
   }
@@ -277,7 +308,6 @@ class AmendmentFspValidationStepTest {
   @Test
   @DisplayName("1595-B: Should skip execution safely if before state lacks Area of Law")
   void validate_whenBeforeStateLacksAreaOfLaw_skipsFspCall() {
-    // Arrange: State has a calculated fee (so it passes the first guard), but areaOfLaw is null
     ClaimAmendmentState state =
         stateBuilder
             .beforeState(beforeStateBuilder.areaOfLaw(null).build())
@@ -289,6 +319,35 @@ class AmendmentFspValidationStepTest {
 
     // Assert
     assertThat(errors).isEmpty();
+    verifyNoInteractions(fspClient);
+  }
+
+  @Test
+  @DisplayName(
+      "Outcome-check gate: should skip the FSP call when a non-fatal validation error was already "
+          + "collected by an earlier step, even for a pricing-impacting change")
+  void validate_whenErrorsAlreadyCollected_skipsFspCall() {
+    // Arrange: a genuine pricing-impacting fee-code change that would normally trigger the FSP
+    // call...
+    ClaimAmendmentState state =
+        stateBuilder
+            .beforeState(beforeStateBuilder.areaOfLaw(AreaOfLaw.CRIME_LOWER).build())
+            .postAmendmentState(
+                postStateBuilder.areaOfLaw(AreaOfLaw.CRIME_LOWER).feeCode("FEE02").build())
+            .build();
+
+    // ...but an earlier step has already collected a non-fatal validation error.
+    state.addErrors(
+        List.of(
+            ClaimAmendmentValidationError.of(
+                ClaimAmendmentValidationCode.INVALID_USER_IDENTIFIER_MISSING)));
+
+    // Act
+    List<ClaimAmendmentValidationError> errors = validationStep.validate(state);
+
+    // Assert: the step adds nothing of its own and makes no outbound FSP call.
+    assertThat(errors).isEmpty();
+    assertThat(state.getFspResponseContext()).isNull();
     verifyNoInteractions(fspClient);
   }
 }
